# test_task

./: .gitignore  CMakeLists.txt  README.md
Qt5/plugins/bearer/: libqgenericbearer.so.debug
cmake/modules/: Find_OpenSSL.cmake
scripts/: load_openssl
src/cli/: CMakeLists.txt  main.cpp  version.h.in
src/mylib/: CMakeLists.txt  branch.cpp  branch.h  branch.hpp  jsonwork.cpp  jsonwork.h  jsonwork.hpp  loader.cpp  loader.hpp  mylib.cpp  mylib.h  mylib.hpp
